snapshots/syntax/library/statements/rmdir/rmdir_with_function_result.snap
---
source: src/syntax/library/statements/filesystem/rmdir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: RmDirStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: RmDirKeyword
                  text: RmDir
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: GetTempPath
                - kind: LeftParenthesis
                  text: (
                - kind: RightParenthesis
                  text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
